--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="top-bar">
     <button class="btn primary" onclick="goAdd()">+ Add New</button>
     <button class="btn secondary" onclick="goHistory()">📜 History</button>
+    <button class="btn danger" onclick="logout()">🚪 Logout</button>
   </div>
 
   <div id="userList" class="user-list"></div>
@@ -54,7 +55,16 @@ function openUser(id) {
 }
 
 loadUsers();
+
+  <script>
+function logout() {
+  localStorage.removeItem("admin"); // remove admin session
+  window.location.href = "login.html"; // go back to login
+}
+</script>
+
 </script>
 
 </body>
 </html>
+
