--- a/admin-register.html
+++ b/admin-register.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>Register Admin</title>
 
 <link rel="stylesheet" href="style.css">
@@ -71,3 +73,4 @@ document
 
 </body>
 </html>
+
