--- a/updaterfid.html
+++ b/updaterfid.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale= 1.0">
+
 <title>Update RFID</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.3/dist/umd/supabase.js"></script>
@@ -91,3 +93,4 @@ loadData();
 
 </body>
 </html>
+
