--- a/manage.html
+++ b/manage.html
@@ -12,6 +12,7 @@
 
 <div class="screen">
   <div class="card">
+    <div class="manage-card">
 
     <h2 id="userName"></h2>
     <p id="userStatus"></p>
@@ -91,4 +92,5 @@ loadUser();
 
 </body>
 </html>
+
 
