--- a/login.html
+++ b/login.html
@@ -10,6 +10,9 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="logo-wrapper">
+  <img src="sdd-logo.png" alt="SDD Logo">
+</div>
 
 <div class="container">
   <h2>Admin Login</h2>
@@ -79,4 +82,5 @@ document
 
 </body>
 </html>
+
 
