--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
 
 <div class="screen">
+       <div class="logo-wrapper">
+  <img src="sdd-logo.png" alt="SDD Logo">
+</div>
 
   <div class="top-bar">
     <button class="btn primary" onclick="goAdd()">+ Add New</button>
@@ -69,6 +72,7 @@ loadUsers();
 
 </body>
 </html>
+
 
 
 
