--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="screen">
-       <div class="logo-wrapper large">
+       <div class="logo-wrapper">
   <img src="sdd-logo.png" alt="SDD Logo">
 </div>
 
@@ -72,6 +72,7 @@ loadUsers();
 
 </body>
 </html>
+
 
 
 
