--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div class="top-bar">
     <div class="logo-wrapper">
     <img src="sdd-logo.png" alt="SDD Logo">
+    </div>
     <button class="btn primary" onclick="goAdd()">+ Add New</button>
     <button class="btn secondary" onclick="goHistory()">📜 History</button>
     <button class="btn danger" onclick="logout()">🚪 Logout</button>
@@ -72,6 +73,7 @@ loadUsers();
 
 </body>
 </html>
+
 
 
 
