--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
   <button id="loginBtn">Login</button>
 
   <p id="errorMsg" class="error-msg" style="display:none;">
-  Username and password is incorrect. Please try again.
+  Username or Password is Incorrect. Please try again.
 </p>
 
   <a class="link" href="admin-register.html">Don't have an account?</a>
@@ -86,6 +86,7 @@ document
 
 </body>
 </html>
+
 
 
 
