--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
 
   <button id="loginBtn">Login</button>
 
-  <p id="errorMsg" class="error-msg" style="display:none;">
+  <p id="errorMsg" class="error-msg">
   Username or Password is Incorrect. Please try again.
 </p>
 
@@ -86,6 +86,7 @@ document
 
 </body>
 </html>
+
 
 
 
