--- a/index.html
+++ b/index.html
@@ -68,9 +68,21 @@ loadUsers();
 
 
 </script>
+<!-- LOGOUT CONFIRM MODAL -->
+<div id="logoutModal" class="modal-overlay">
+  <div class="modal-box">
+    <p>Are you sure you want to log out?</p>
+
+    <div class="modal-actions">
+      <button class="btn danger" onclick="confirmLogout()">Yes</button>
+      <button class="btn secondary" onclick="closeLogout()">No</button>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
+
 
 
 
