--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
   <div id="userList" class="user-list"></div>
 
 </div>
+<!-- LOGOUT CONFIRM MODAL -->
+<div id="logoutModal" class="modal-overlay">
+  <div class="modal-box">
+    <p>Are you sure you want to log out?</p>
 
+    <div class="modal-actions">
+      <button class="btn danger" onclick="confirmLogout()">Yes</button>
+      <button class="btn secondary" onclick="closeLogout()">No</button>
+    </div>
+  </div>
+</div>
+  
 <script>
 const SUPABASE_URL = "https://fiiflkakeaorglvqyjxx.supabase.co";
 const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpaWZsa2FrZWFvcmdsdnF5anh4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njk1NzMxMTcsImV4cCI6MjA4NTE0OTExN30.jWvGfrYhLtXgTKPlLod_TmdavoIAKudeQZ2AT42pVE8";
@@ -54,34 +65,28 @@ async function loadUsers() {
   });
 }
 function logout() {
-  localStorage.removeItem("admin"); // remove admin session
-  window.location.href = "login.html"; // go back to login
+  document.getElementById("logoutModal").style.display = "flex";
 }
+
+function closeLogout() {
+  document.getElementById("logoutModal").style.display = "none";
+}
+
+function confirmLogout() {
+  localStorage.removeItem("admin");
+  window.location.href = "login.html";
+}
+
 function openUser(id) {
   location.href = `manage.html?id=${id}`;
 }
 
 loadUsers();
 
-
-
-
-
 </script>
-<!-- LOGOUT CONFIRM MODAL -->
-<div id="logoutModal" class="modal-overlay">
-  <div class="modal-box">
-    <p>Are you sure you want to log out?</p>
-
-    <div class="modal-actions">
-      <button class="btn danger" onclick="confirmLogout()">Yes</button>
-      <button class="btn secondary" onclick="closeLogout()">No</button>
-    </div>
-  </div>
-</div>
-
 </body>
 </html>
+
 
 
 
