--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 <script>
 /* ===== SUPABASE ===== */
 const SUPABASE_URL = "https://fiiflkakeaorglvqyjxx.supabase.co";
-const SUPABASE_KEY = "YOUR_KEY_HERE";
+const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpaWZsa2FrZWFvcmdsdnF5anh4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njk1NzMxMTcsImV4cCI6MjA4NTE0OTExN30.jWvGfrYhLtXgTKPlLod_TmdavoIAKudeQZ2AT42pVE8";
+
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
 /* ===== AUTH CHECK ===== */
@@ -97,3 +98,4 @@ loadUsers();
 
 </body>
 </html>
+
