--- a/add-user.html
+++ b/add-user.html
@@ -97,16 +97,14 @@ document
   .getElementById("registerFingerprintBtn")
   .addEventListener("click", async () => {
 
-    fpStatus.innerText = "🟡 Waiting for fingerprint...";
-
-    // 1. Trigger enrollment on ESP32
-    await fetch(
+    const res = await fetch(
       "https://fiiflkakeaorglvqyjxx.supabase.co/functions/v1/start-fingerprint-enroll",
       {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
-          "Authorization": "Bearer " + SUPABASE_KEY
+          "Authorization":
+            "Bearer YOUR_ANON_KEY_HERE"
         },
         body: JSON.stringify({
           device_id: "drawer_01"
@@ -114,29 +112,15 @@ document
       }
     );
 
-    // 2. Poll Supabase for enrollment result
-    const poll = setInterval(async () => {
+    const data = await res.json();
 
-      const { data, error } = await db
-        .from("device_commands")
-        .select("status, result")
-        .eq("device_id", "drawer_01")
-        .order("created_at", { ascending: false })
-        .limit(1)
-        .single();
-
-      if (error || !data) return;
-
-      if (data.status === "DONE" && data.result?.fingerprint_id) {
-        clearInterval(poll);
-
-        enrolledFingerprintId = data.result.fingerprint_id;
-        fpStatus.innerText = "✅ Fingerprint Registered";
-      }
-
-    }, 2000);
+    if (data.status === "ENROLL_STARTED") {
+      alert("🟢 Please place finger on the device");
+    } else {
+      alert("❌ Failed to start enrollment");
+      console.log(data);
+    }
 });
-
 /* ================= SAVE USER ================= */
 document.getElementById("saveBtn").addEventListener("click", async () => {
 
@@ -170,3 +154,4 @@ document.getElementById("saveBtn").addEventListener("click", async () => {
 
 </body>
 </html>
+
