--- a/add-user.html
+++ b/add-user.html
@@ -104,7 +104,7 @@ document
         headers: {
           "Content-Type": "application/json",
           "Authorization":
-            "Bearer YOUR_ANON_KEY_HERE"
+            "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpaWZsa2FrZWFvcmdsdnF5anh4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njk1NzMxMTcsImV4cCI6MjA4NTE0OTExN30.jWvGfrYhLtXgTKPlLod_TmdavoIAKudeQZ2AT42pVE8"
         },
         body: JSON.stringify({
           device_id: "drawer_01"
@@ -154,4 +154,5 @@ document.getElementById("saveBtn").addEventListener("click", async () => {
 
 </body>
 </html>
+
 
