--- a/add-user.html
+++ b/add-user.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Add User</title>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="https://cdn.jsdelivr.net"></script>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -127,13 +127,13 @@ document
     fpStatus.innerText = "";
 
     const res = await fetch(
-      "https://fiiflkakeaorglvqyjxx.supabase.co/functions/v1/start-fingerprint-enroll",
+      "https://fiiflkakeaorglvqyjxx.supabase.co",
       {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
-          "Authorization":
-            "Bearer " + SUPABASE_KEY
+          // Remove the Authorization header here if you deployed the function with --no-verify-jwt
+          // "Authorization": "Bearer " + SUPABASE_KEY 
         },
         body: JSON.stringify({
           device_id: "drawer_01"
