--- a/add-user.html
+++ b/add-user.html
@@ -43,10 +43,10 @@ const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 const rfidSelect = document.getElementById("rfid_uid");
 const fpStatus = document.getElementById("fpStatus");
 let enrolledFingerprintId = null;
-let currentCommandId = null; // 🟢 FIX: New variable to store the specific command ID
 
 /* ================= LOAD RFID (UNCHANGED) ================= */
 async function loadRFIDs() {
+
   const { data: allRFIDs, error: rfidErr } = await db
     .from("rfid_cards")
     .select("uid");
@@ -92,21 +92,22 @@ async function loadRFIDs() {
 
 loadRFIDs();
 
-/* ================= FINGERPRINT RESULT POLLING (MODIFIED) ================= */
+/* ================= FINGERPRINT RESULT POLLING (NEW) ================= */
 async function waitForFingerprintResult() {
   fpStatus.innerText = "⌛ Waiting for fingerprint...";
 
   const interval = setInterval(async () => {
-    // 🟢 FIX: Query using the specific command_id we just created
+
     const { data, error } = await db
       .from("device_commands")
       .select("*")
-      .eq("id", currentCommandId) // 🟢 FIX: Use the specific ID
+      .eq("device_id", "drawer_01")
       .eq("status", "DONE")
+      .order("created_at", { ascending: false })
+      .limit(1)
       .single();
 
-    // If we have an error or the status isn't DONE yet, just return and poll again
-    if (error || !data || data.fingerprint_id === undefined || data.fingerprint_id === null) return;
+    if (error || !data) return;
 
     enrolledFingerprintId = data.fingerprint_id;
 
@@ -118,7 +119,7 @@ async function waitForFingerprintResult() {
   }, 2000);
 }
 
-/* ================= REGISTER FINGERPRINT (MODIFIED) ================= */
+/* ================= REGISTER FINGERPRINT ================= */
 document
   .getElementById("registerFingerprintBtn")
   .addEventListener("click", async () => {
@@ -131,7 +132,9 @@ document
         method: "POST",
         headers: {
           "Content-Type": "application/json",
-          // "Authorization": "Bearer " + SUPABASE_KEY // Removed header as function is public
+          // The Authorization header is removed/commented out here 
+          // because the function was deployed with --no-verify-jwt
+          // "Authorization": "Bearer " + SUPABASE_KEY 
         },
         body: JSON.stringify({
           device_id: "drawer_01"
@@ -140,11 +143,10 @@ document
     );
 
     const data = await res.json();
-    
+
     if (data.status === "ENROLL_STARTED") {
-      currentCommandId = data.command_id; // 🟢 FIX: Capture the new command ID
       alert("🟢 Please place finger on the device");
-      waitForFingerprintResult();
+      waitForFingerprintResult(); // 👈 IMPORTANT
     } else {
       alert("❌ Failed to start enrollment");
       console.log(data);
@@ -153,6 +155,7 @@ document
 
 /* ================= SAVE USER ================= */
 document.getElementById("saveBtn").addEventListener("click", async () => {
+
   const name = document.getElementById("name").value.trim();
   const rfid_uid = rfidSelect.value;
 
