--- a/add-user.html
+++ b/add-user.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Add User</title>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="https://cdn.jsdelivr.net"></script>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -43,6 +43,7 @@ const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 const rfidSelect = document.getElementById("rfid_uid");
 const fpStatus = document.getElementById("fpStatus");
 let enrolledFingerprintId = null;
+let currentCommandId = null; // Store the ID of the command we are tracking
 
 /* ================= LOAD RFID (UNCHANGED) ================= */
 async function loadRFIDs() {
@@ -92,34 +93,37 @@ async function loadRFIDs() {
 
 loadRFIDs();
 
-/* ================= FINGERPRINT RESULT POLLING (NEW) ================= */
+/* ================= FINGERPRINT RESULT POLLING (MODIFIED) ================= */
 async function waitForFingerprintResult() {
   fpStatus.innerText = "⌛ Waiting for fingerprint...";
 
   const interval = setInterval(async () => {
-
+    // Poll the specific command ID we just generated
     const { data, error } = await db
       .from("device_commands")
       .select("*")
-      .eq("device_id", "drawer_01")
+      .eq("id", currentCommandId)
       .eq("status", "DONE")
-      .order("created_at", { ascending: false })
-      .limit(1)
       .single();
 
+    // If status isn't DONE yet, return and poll again
     if (error || !data) return;
 
-    enrolledFingerprintId = data.fingerprint_id;
-
-    fpStatus.innerText =
-      "✅ Fingerprint registered (ID: " + enrolledFingerprintId + ")";
-
-    clearInterval(interval);
+    // Check if the hardware returned a fingerprint ID correctly
+    if (data.fingerprint_id !== null) {
+      enrolledFingerprintId = data.fingerprint_id;
+      fpStatus.innerText = "✅ Fingerprint registered (ID: " + enrolledFingerprintId + ")";
+      clearInterval(interval); // Stop polling once we have the ID
+    } else {
+      // Handle error case where hardware failed to enroll but marked status DONE
+      fpStatus.innerText = "❌ Enrollment failed on device. Try again.";
+      clearInterval(interval);
+    }
 
   }, 2000);
 }
 
-/* ================= REGISTER FINGERPRINT ================= */
+/* ================= REGISTER FINGERPRINT (MODIFIED) ================= */
 document
   .getElementById("registerFingerprintBtn")
   .addEventListener("click", async () => {
@@ -127,14 +131,12 @@ document
     fpStatus.innerText = "";
 
     const res = await fetch(
-      "https://fiiflkakeaorglvqyjxx.supabase.co/functions/v1/start-fingerprint-enroll",
+      "https://fiiflkakeaorglvqyjxx.supabase.co",
       {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
-          // The Authorization header is removed/commented out here 
-          // because the function was deployed with --no-verify-jwt
-          // "Authorization": "Bearer " + SUPABASE_KEY 
+          // "Authorization": "Bearer " + SUPABASE_KEY // Removed header as function is public
         },
         body: JSON.stringify({
           device_id: "drawer_01"
@@ -143,27 +145,65 @@ document
     );
 
     const data = await res.json();
-
+    
     if (data.status === "ENROLL_STARTED") {
+      currentCommandId = data.command_id; // Capture the specific command ID
       alert("🟢 Please place finger on the device");
-      waitForFingerprintResult(); // 👈 IMPORTANT
+      waitForFingerprintResult();
     } else {
       alert("❌ Failed to start enrollment");
       console.log(data);
     }
 });
 
-/* ================= SAVE USER ================= */
+/* ================= SAVE USER (HANDLING UNIQUENESS) ================= */
 document.getElementById("saveBtn").addEventListener("click", async () => {
 
   const name = document.getElementById("name").value.trim();
   const rfid_uid = rfidSelect.value;
 
-  if (!name || !rfid_uid || !enrolledFingerprintId) {
+  if (!name || !rfid_uid || enrolledFingerprintId === null) {
     alert("Please complete all fields and register fingerprint");
     return;
   }
+  
+  // Optional: Check if this fingerprint ID is already in use by another user
+  const { data: existingUser, error: checkError } = await db
+    .from("drawer_users")
+    .select("id, name")
+    .eq("fingerprint_id", enrolledFingerprintId)
+    .single();
 
+  if (checkError && checkError.code !== 'PGRST116') { // PGRST116 means no rows found
+    alert("An error occurred while checking existing users.");
+    console.error(checkError);
+    return;
+  }
+
+  if (existingUser) {
+    // If found, prompt the user to confirm replacement
+    const confirmReplace = confirm(
+        `Fingerprint ID ${enrolledFingerprintId} is already assigned to ${existingUser.name}. Replace them?`
+    );
+    
+    if (confirmReplace) {
+        // Option 1: Deactivate the old user
+        const { error: deactivateError } = await db
+            .from("drawer_users")
+            .update({ is_active: false })
+            .eq("id", existingUser.id);
+
+        if (deactivateError) {
+            alert("Failed to deactivate old user.");
+            console.error(deactivateError);
+            return;
+        }
+    } else {
+        return; // Stop the save process if they click cancel
+    }
+  }
+
+  // Final insertion into the drawer_users table
   const { error } = await db
     .from("drawer_users")
     .insert([{
