--- a/add-user.html
+++ b/add-user.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Add User</title>
 
+<!-- 🟢 FIX 1: Add the complete Supabase library URL -->
 <script src="https://cdn.jsdelivr.net"></script>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -32,6 +33,7 @@
   <a class="link" href="index.html">⬅ Back</a>
 </div>
 
+<!-- 🟢 FIX 2: Move the main script block here, after the library loads -->
 <script>
 /* ================= SUPABASE CONFIG ================= */
 const SUPABASE_URL = "https://fiiflkakeaorglvqyjxx.supabase.co";
@@ -43,7 +45,7 @@ const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 const rfidSelect = document.getElementById("rfid_uid");
 const fpStatus = document.getElementById("fpStatus");
 let enrolledFingerprintId = null;
-let currentCommandId = null; // Store the ID of the command we are tracking
+let currentCommandId = null;
 
 /* ================= LOAD RFID (UNCHANGED) ================= */
 async function loadRFIDs() {
@@ -98,7 +100,6 @@ async function waitForFingerprintResult() {
   fpStatus.innerText = "⌛ Waiting for fingerprint...";
 
   const interval = setInterval(async () => {
-    // Poll the specific command ID we just generated
     const { data, error } = await db
       .from("device_commands")
       .select("*")
@@ -106,16 +107,13 @@ async function waitForFingerprintResult() {
       .eq("status", "DONE")
       .single();
 
-    // If status isn't DONE yet, return and poll again
     if (error || !data) return;
 
-    // Check if the hardware returned a fingerprint ID correctly
     if (data.fingerprint_id !== null) {
       enrolledFingerprintId = data.fingerprint_id;
       fpStatus.innerText = "✅ Fingerprint registered (ID: " + enrolledFingerprintId + ")";
-      clearInterval(interval); // Stop polling once we have the ID
+      clearInterval(interval);
     } else {
-      // Handle error case where hardware failed to enroll but marked status DONE
       fpStatus.innerText = "❌ Enrollment failed on device. Try again.";
       clearInterval(interval);
     }
@@ -130,13 +128,14 @@ document
 
     fpStatus.innerText = "";
 
+    // 🟢 FIX 3: Use the correct, full URL for your Edge Function
     const res = await fetch(
       "https://fiiflkakeaorglvqyjxx.supabase.co",
       {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
-          // "Authorization": "Bearer " + SUPABASE_KEY // Removed header as function is public
+          // "Authorization": "Bearer " + SUPABASE_KEY // Function is public
         },
         body: JSON.stringify({
           device_id: "drawer_01"
@@ -147,7 +146,7 @@ document
     const data = await res.json();
     
     if (data.status === "ENROLL_STARTED") {
-      currentCommandId = data.command_id; // Capture the specific command ID
+      currentCommandId = data.command_id;
       alert("🟢 Please place finger on the device");
       waitForFingerprintResult();
     } else {
@@ -162,13 +161,11 @@ document.getElementById("saveBtn").addEventListener("click", async () => {
   const name = document.getElementById("name").value.trim();
   const rfid_uid = rfidSelect.value;
 
-  // This check ensures 'enrolledFingerprintId' is captured before saving
   if (!name || !rfid_uid || enrolledFingerprintId === null) {
     alert("Please complete all fields and register fingerprint");
     return;
   }
 
-  // Final insertion into the 'drawer_users' table happens here!
   const { error } = await db
     .from("drawer_users")
     .insert([{
