--- a/add-user.html
+++ b/add-user.html
@@ -5,8 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Add User</title>
 
-<!-- This script loads the external Supabase library -->
-<script src="https://cdn.jsdelivr.net"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -33,7 +32,6 @@
   <a class="link" href="index.html">⬅ Back</a>
 </div>
 
-<!-- 🟢 FIX: Move your custom JavaScript block down here, just before the closing </body> tag -->
 <script>
 /* ================= SUPABASE CONFIG ================= */
 const SUPABASE_URL = "https://fiiflkakeaorglvqyjxx.supabase.co";
@@ -45,11 +43,10 @@ const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 const rfidSelect = document.getElementById("rfid_uid");
 const fpStatus = document.getElementById("fpStatus");
 let enrolledFingerprintId = null;
-let currentCommandId = null; // Store the ID of the command we are tracking
+let currentCommandId = null; // 🟢 FIX: New variable to store the specific command ID
 
 /* ================= LOAD RFID (UNCHANGED) ================= */
 async function loadRFIDs() {
-
   const { data: allRFIDs, error: rfidErr } = await db
     .from("rfid_cards")
     .select("uid");
@@ -100,27 +97,23 @@ async function waitForFingerprintResult() {
   fpStatus.innerText = "⌛ Waiting for fingerprint...";
 
   const interval = setInterval(async () => {
-    // Poll the specific command ID we just generated
+    // 🟢 FIX: Query using the specific command_id we just created
     const { data, error } = await db
       .from("device_commands")
       .select("*")
-      .eq("id", currentCommandId)
+      .eq("id", currentCommandId) // 🟢 FIX: Use the specific ID
       .eq("status", "DONE")
       .single();
 
-    // If status isn't DONE yet, return and poll again
-    if (error || !data) return;
+    // If we have an error or the status isn't DONE yet, just return and poll again
+    if (error || !data || data.fingerprint_id === undefined || data.fingerprint_id === null) return;
 
-    // Check if the hardware returned a fingerprint ID correctly
-    if (data.fingerprint_id !== null) {
-      enrolledFingerprintId = data.fingerprint_id;
-      fpStatus.innerText = "✅ Fingerprint registered (ID: " + enrolledFingerprintId + ")";
-      clearInterval(interval); // Stop polling once we have the ID
-    } else {
-      // Handle error case where hardware failed to enroll but marked status DONE
-      fpStatus.innerText = "❌ Enrollment failed on device. Try again.";
-      clearInterval(interval);
-    }
+    enrolledFingerprintId = data.fingerprint_id;
+
+    fpStatus.innerText =
+      "✅ Fingerprint registered (ID: " + enrolledFingerprintId + ")";
+
+    clearInterval(interval);
 
   }, 2000);
 }
@@ -133,7 +126,7 @@ document
     fpStatus.innerText = "";
 
     const res = await fetch(
-      "https://fiiflkakeaorglvqyjxx.supabase.co",
+      "https://fiiflkakeaorglvqyjxx.supabase.co/functions/v1/start-fingerprint-enroll",
       {
         method: "POST",
         headers: {
@@ -149,7 +142,7 @@ document
     const data = await res.json();
     
     if (data.status === "ENROLL_STARTED") {
-      currentCommandId = data.command_id; // Capture the specific command ID
+      currentCommandId = data.command_id; // 🟢 FIX: Capture the new command ID
       alert("🟢 Please place finger on the device");
       waitForFingerprintResult();
     } else {
@@ -160,17 +153,14 @@ document
 
 /* ================= SAVE USER ================= */
 document.getElementById("saveBtn").addEventListener("click", async () => {
-
   const name = document.getElementById("name").value.trim();
   const rfid_uid = rfidSelect.value;
 
-  // This check ensures 'enrolledFingerprintId' is captured before saving
-  if (!name || !rfid_uid || enrolledFingerprintId === null) {
+  if (!name || !rfid_uid || !enrolledFingerprintId) {
     alert("Please complete all fields and register fingerprint");
     return;
   }
 
-  // Final insertion into the 'drawer_users' table happens here!
   const { error } = await db
     .from("drawer_users")
     .insert([{
