--- a/add-user.html
+++ b/add-user.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Add User</title>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<!-- This script loads the external Supabase library -->
+<script src="https://cdn.jsdelivr.net"></script>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -32,6 +33,7 @@
   <a class="link" href="index.html">⬅ Back</a>
 </div>
 
+<!-- 🟢 FIX: Move your custom JavaScript block down here, just before the closing </body> tag -->
 <script>
 /* ================= SUPABASE CONFIG ================= */
 const SUPABASE_URL = "https://fiiflkakeaorglvqyjxx.supabase.co";
@@ -43,10 +45,11 @@ const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 const rfidSelect = document.getElementById("rfid_uid");
 const fpStatus = document.getElementById("fpStatus");
 let enrolledFingerprintId = null;
-let currentCommandId = null; // 🟢 FIX: New variable to store the specific command ID
+let currentCommandId = null; // Store the ID of the command we are tracking
 
 /* ================= LOAD RFID (UNCHANGED) ================= */
 async function loadRFIDs() {
+
   const { data: allRFIDs, error: rfidErr } = await db
     .from("rfid_cards")
     .select("uid");
@@ -97,23 +100,27 @@ async function waitForFingerprintResult() {
   fpStatus.innerText = "⌛ Waiting for fingerprint...";
 
   const interval = setInterval(async () => {
-    // 🟢 FIX: Query using the specific command_id we just created
+    // Poll the specific command ID we just generated
     const { data, error } = await db
       .from("device_commands")
       .select("*")
-      .eq("id", currentCommandId) // 🟢 FIX: Use the specific ID
+      .eq("id", currentCommandId)
       .eq("status", "DONE")
       .single();
 
-    // If we have an error or the status isn't DONE yet, just return and poll again
-    if (error || !data || data.fingerprint_id === undefined || data.fingerprint_id === null) return;
+    // If status isn't DONE yet, return and poll again
+    if (error || !data) return;
 
-    enrolledFingerprintId = data.fingerprint_id;
-
-    fpStatus.innerText =
-      "✅ Fingerprint registered (ID: " + enrolledFingerprintId + ")";
-
-    clearInterval(interval);
+    // Check if the hardware returned a fingerprint ID correctly
+    if (data.fingerprint_id !== null) {
+      enrolledFingerprintId = data.fingerprint_id;
+      fpStatus.innerText = "✅ Fingerprint registered (ID: " + enrolledFingerprintId + ")";
+      clearInterval(interval); // Stop polling once we have the ID
+    } else {
+      // Handle error case where hardware failed to enroll but marked status DONE
+      fpStatus.innerText = "❌ Enrollment failed on device. Try again.";
+      clearInterval(interval);
+    }
 
   }, 2000);
 }
@@ -126,15 +133,13 @@ document
     fpStatus.innerText = "";
 
     const res = await fetch(
-      "https://fiiflkakeaorglvqyjxx.supabase.co/functions/v1/start-fingerprint-enroll",
+      "https://fiiflkakeaorglvqyjxx.supabase.co",
       {
         method: "POST",
-       headers: {
-  "Content-Type": "application/json",
-  "Authorization": "Bearer " + SUPABASE_KEY,
-  "apikey": SUPABASE_KEY
-},
-
+        headers: {
+          "Content-Type": "application/json",
+          // "Authorization": "Bearer " + SUPABASE_KEY // Removed header as function is public
+        },
         body: JSON.stringify({
           device_id: "drawer_01"
         })
@@ -144,7 +149,7 @@ document
     const data = await res.json();
     
     if (data.status === "ENROLL_STARTED") {
-      currentCommandId = data.command_id; // 🟢 FIX: Capture the new command ID
+      currentCommandId = data.command_id; // Capture the specific command ID
       alert("🟢 Please place finger on the device");
       waitForFingerprintResult();
     } else {
@@ -155,14 +160,17 @@ document
 
 /* ================= SAVE USER ================= */
 document.getElementById("saveBtn").addEventListener("click", async () => {
+
   const name = document.getElementById("name").value.trim();
   const rfid_uid = rfidSelect.value;
 
-  if (!name || !rfid_uid || !enrolledFingerprintId) {
+  // This check ensures 'enrolledFingerprintId' is captured before saving
+  if (!name || !rfid_uid || enrolledFingerprintId === null) {
     alert("Please complete all fields and register fingerprint");
     return;
   }
 
+  // Final insertion into the 'drawer_users' table happens here!
   const { error } = await db
     .from("drawer_users")
     .insert([{
@@ -185,4 +193,3 @@ document.getElementById("saveBtn").addEventListener("click", async () => {
 
 </body>
 </html>
-
