--- a/add-user.html
+++ b/add-user.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Add User</title>
 
-<!-- This script loads the external Supabase library -->
+<!-- This script loads the external Supabase library first -->
 <script src="https://cdn.jsdelivr.net"></script>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -33,7 +33,7 @@
   <a class="link" href="index.html">⬅ Back</a>
 </div>
 
-<!-- 🟢 FIX: Move your custom JavaScript block down here, just before the closing </body> tag -->
+<!-- 🟢 FIX: Your custom JavaScript block is moved here, ensuring the library is defined before use -->
 <script>
 /* ================= SUPABASE CONFIG ================= */
 const SUPABASE_URL = "https://fiiflkakeaorglvqyjxx.supabase.co";
