--- a/add-user.html
+++ b/add-user.html
@@ -6,7 +6,7 @@
 <title>Add User</title>
 
 <!-- This script loads the external Supabase library first -->
-<script src="https://cdn.jsdelivr.net"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -193,3 +193,4 @@ document.getElementById("saveBtn").addEventListener("click", async () => {
 
 </body>
 </html>
+
