--- a/add-user.html
+++ b/add-user.html
@@ -133,6 +133,7 @@ document
     fpStatus.innerText = "";
 
     const res = await fetch(
+      // 🟢 FIX: Use the full Edge Function URL, not the root domain
       "https://fiiflkakeaorglvqyjxx.supabase.co",
       {
         method: "POST",
@@ -193,4 +194,5 @@ document.getElementById("saveBtn").addEventListener("click", async () => {
 
 </body>
 </html>
+
 
