Update login page with new design and functionality

--- a/login.html
+++ b/login.html
@@ -4,11 +4,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Admin Login</title>
+<title>SAFETY DEPOSIT DRAWER</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <link rel="stylesheet" href="style.css">
 </head>
+
+<style>  
+body{
+  background-image: url("https://img.freepik.com/free-vector/blue-geometric-technological-background_1055-1907.jpg?semt=ais_hybrid&w=740&q=80");
+  background-size: cover;
+</style>
 <body>
 
 
@@ -86,6 +92,7 @@ document
 
 </body>
 </html>
+
 
 
 
