Change background image and format HTML
Updated background image and cleaned up HTML structure.

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 
 <style>  
 body{
-  background-image: url("https://img.freepik.com/free-vector/vector-blue-wave-transparent_1055-7084.jpg?semt=ais_hybrid&w=740&q=80");
+  background-image: url("https://i.pinimg.com/736x/5a/65/37/5a653708fd9248867cb90a09919a40e8.jpg");
   background-size: cover;
 }
 </style>
@@ -93,6 +93,7 @@ document
 
 </body>
 </html>
+
 
 
 
