--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 
 <style>  
 body{
-  background-image: url("https://i.pinimg.com/736x/5a/65/37/5a653708fd9248867cb90a09919a40e8.jpg");
+  background-image: url("https://www.nicepng.com/png/full/26-266973_image-page-transparent-background-oasis-skin-1-png.png");
   background-size: cover;
 }
 </style>
@@ -93,6 +93,7 @@ document
 
 </body>
 </html>
+
 
 
 
