--- a/login.html
+++ b/login.html
@@ -3,39 +3,155 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SAFETY DEPOSIT DRAWER | Admin Login</title>
 
-<title>SAFETY DEPOSIT DRAWER</title>
-
+<!-- Supabase -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<link rel="stylesheet" href="style.css">
-</head>
 
-<style>  
-body{
-  background-image: url("https://www.nicepng.com/png/full/26-266973_image-page-transparent-background-oasis-skin-1-png.png");
+<style>
+* {
+  box-sizing: border-box;
+  font-family: "Segoe UI", sans-serif;
+}
+
+body {
+  min-height: 100vh;
+  margin: 0;
+
+  background:
+    linear-gradient(
+      135deg,
+      rgba(15, 32, 39, 0.9),
+      rgba(32, 58, 67, 0.9),
+      rgba(44, 83, 100, 0.9)
+    ),
+    url("https://images.unsplash.com/photo-1526378722484-cc5c51092d5b");
+
   background-size: cover;
+  background-position: center;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 360px;
+  padding: 35px;
+  border-radius: 18px;
+
+  /* GLASS EFFECT */
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 10px 40px rgba(0,0,0,0.4);
+
+  color: #fff;
+  text-align: center;
+}
+
+.logo-wrapper img {
+  width: 90px;
+  margin-bottom: 15px;
+}
+
+h2 {
+  margin-bottom: 20px;
+  font-weight: 600;
+}
+
+.input-group {
+  text-align: left;
+  margin-bottom: 15px;
+}
+
+label {
+  font-size: 0.85rem;
+  color: rgba(255,255,255,0.8);
+}
+
+input {
+  width: 100%;
+  padding: 11px;
+  margin-top: 5px;
+  border-radius: 10px;
+
+  background: rgba(255,255,255,0.15);
+  border: 1px solid rgba(255,255,255,0.35);
+  color: #fff;
+  outline: none;
+}
+
+input::placeholder {
+  color: rgba(255,255,255,0.6);
+}
+
+button {
+  width: 100%;
+  padding: 12px;
+  margin-top: 15px;
+
+  border-radius: 10px;
+  border: none;
+
+  background: rgba(255,255,255,0.3);
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+button:hover {
+  background: rgba(255,255,255,0.45);
+}
+
+.error-msg {
+  display: none;
+  margin-top: 10px;
+  font-size: 0.85rem;
+  color: #ffb3b3;
+}
+
+.link {
+  display: block;
+  margin-top: 15px;
+  font-size: 0.85rem;
+  color: rgba(255,255,255,0.8);
+  text-decoration: none;
+}
+
+.link:hover {
+  text-decoration: underline;
 }
 </style>
-<body>
+</head>
 
+<body>
 
 <div class="container">
   <div class="logo-wrapper">
-  <img src="sdd-logo.png" alt="SDD Logo">
-</div>
+    <img src="sdd-logo.png" alt="SDD Logo">
+  </div>
+
   <h2>Admin Login</h2>
 
-  <label>Username</label>
-  <input id="username">
+  <div class="input-group">
+    <label>Username</label>
+    <input id="username" type="text" placeholder="Enter username">
+  </div>
 
-  <label>Password</label>
-  <input type="password" id="password">
+  <div class="input-group">
+    <label>Password</label>
+    <input id="password" type="password" placeholder="Enter password">
+  </div>
 
   <button id="loginBtn">Login</button>
 
   <p id="errorMsg" class="error-msg">
-  Username or Password is Incorrect. Please try again.
-</p>
+    Username or Password is Incorrect.
+  </p>
 
   <a class="link" href="admin-register.html">Don't have an account?</a>
 </div>
@@ -43,9 +159,7 @@ body{
 <script>
 /* ===== SUPABASE CONFIG ===== */
 const SUPABASE_URL = "https://fiiflkakeaorglvqyjxx.supabase.co";
-const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpaWZsa2FrZWFvcmdsdnF5anh4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njk1NzMxMTcsImV4cCI6MjA4NTE0OTExN30.jWvGfrYhLtXgTKPlLod_TmdavoIAKudeQZ2AT42pVE8";
-
-
+const SUPABASE_KEY = "YOUR_PUBLIC_ANON_KEY";
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
 /* ===== PASSWORD HASH ===== */
@@ -60,10 +174,11 @@ async function hashPassword(password) {
 
 /* ===== LOGIN ===== */
 async function loginAdmin() {
-  document.getElementById("errorMsg").style.display = "none";
+  errorMsg.style.display = "none";
+
   const usernameVal = username.value.trim();
   const passwordVal = password.value;
-  
+
   if (!usernameVal || !passwordVal) {
     alert("Fill all fields");
     return;
@@ -78,17 +193,21 @@ async function loginAdmin() {
     .eq("password_hash", password_hash)
     .single();
 
-if (error || !data) {
-  document.getElementById("errorMsg").style.display = "block";
-  return;
-}
+  if (error || !data) {
+    errorMsg.style.display = "block";
+    return;
+  }
+
   localStorage.setItem("admin", JSON.stringify(data));
   window.location.href = "index.html";
 }
-  
-document
-  .getElementById("loginBtn")
-  .addEventListener("click", loginAdmin);
+
+loginBtn.addEventListener("click", loginAdmin);
+
+/* ENTER KEY SUPPORT */
+document.addEventListener("keydown", e => {
+  if (e.key === "Enter") loginAdmin();
+});
 </script>
 
 </body>
