--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SAFETY DEPOSIT DRAWER | Admin Login</title>
 
-<!-- Supabase -->
+<!-- Supabase CDN -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
@@ -17,7 +17,6 @@
 body {
   min-height: 100vh;
   margin: 0;
-
   background:
     linear-gradient(
       135deg,
@@ -26,10 +25,8 @@ body {
       rgba(44, 83, 100, 0.9)
     ),
     url("https://images.unsplash.com/photo-1526378722484-cc5c51092d5b");
-
   background-size: cover;
   background-position: center;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,15 +36,11 @@ body {
   width: 360px;
   padding: 35px;
   border-radius: 18px;
-
-  /* GLASS EFFECT */
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(12px);
   -webkit-backdrop-filter: blur(12px);
-
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0 10px 40px rgba(0,0,0,0.4);
-
   color: #fff;
   text-align: center;
 }
@@ -77,7 +70,6 @@ input {
   padding: 11px;
   margin-top: 5px;
   border-radius: 10px;
-
   background: rgba(255,255,255,0.15);
   border: 1px solid rgba(255,255,255,0.35);
   color: #fff;
@@ -92,10 +84,8 @@ button {
   width: 100%;
   padding: 12px;
   margin-top: 15px;
-
   border-radius: 10px;
   border: none;
-
   background: rgba(255,255,255,0.3);
   color: #fff;
   font-weight: 600;
@@ -157,22 +147,35 @@ button:hover {
 </div>
 
 <script>
-/* ===== SUPABASE CONFIG ===== */
-const SUPABASE_URL = "https://fiiflkakeaorglvqyjxx.supabase.co";
-const SUPABASE_KEY = "YOUR_PUBLIC_ANON_KEY";
-const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+/* ==============================
+   SUPABASE CONFIG (FIXED)
+   ============================== */
 
-/* ===== PASSWORD HASH ===== */
+/* 🔴 PASTE YOUR REAL ANON PUBLIC KEY HERE */
+const SUPABASE_URL = "https://fiiflkakeaorglvqyjxx.supabase.co";
+const SUPABASE_ANON_KEY = "PASTE_YOUR_ANON_PUBLIC_KEY_HERE";
+
+/* Create client WITH API KEY */
+const db = supabase.createClient(
+  SUPABASE_URL,
+  SUPABASE_ANON_KEY
+);
+
+/* ==============================
+   PASSWORD HASH
+   ============================== */
 async function hashPassword(password) {
   const enc = new TextEncoder();
   const data = enc.encode(password);
   const hash = await crypto.subtle.digest("SHA-256", data);
   return Array.from(new Uint8Array(hash))
-    .map(b => b.toString(16).padStart(2,"0"))
+    .map(b => b.toString(16).padStart(2, "0"))
     .join("");
 }
 
-/* ===== LOGIN ===== */
+/* ==============================
+   LOGIN FUNCTION
+   ============================== */
 async function loginAdmin() {
   errorMsg.style.display = "none";
 
